--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
     <link rel = "stylesheet" href = "./src/css/style.css">
     <script src="./lib/d3/d3.min.js"></script>
-    <script src="./lib/d3-topojson/topojson.v2.min.js"></script>
+    <script src="./lib/d3-geo/d3-geo.v1.min.js"></script>
+    <script src="./lib/d3-geo/d3-array.v1.min.js"></script>
+<!--    <script src="./lib/d3-topojson/topojson.v2.min.js"></script> -->
     <script src="./lib/d3-geo/d3-geo-projection.v2.min.js"></script>
     <script src="./lib/d3-versor/versor.js"></script>
   </head>
